--- a/aaypl-frontend/register.html
+++ b/aaypl-frontend/register.html
@@ -39,21 +39,27 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav>
-    <div class="navbar-inner">
-      <a href="index.html" class="brand">
-        <img src="assets/aaypl-logo.png" alt="AAYPL Logo"/>AAYPL
-      </a>
-      <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="blog.html">Blog</a>
-        <a href="events.html">Events</a>
-        <a href="contact.html">Contact</a>
-        <a href="register.html" class="join-btn">Join Now</a>
-      </div>
+ <nav>
+  <div class="navbar-inner">
+    <a href="index.html" class="brand">
+      <img src="assets/aaypl-logo.png" alt="AAYPL Logo"/>AAYPL
+    </a>
+    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+    <label for="nav-toggle" class="nav-toggle-label" aria-label="Open navigation">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="blog.html">Blog</a>
+      <a href="events.html">Events</a>
+      <a href="contact.html">Contact</a>
+      <a href="register.html" class="join-btn">Join Now</a>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <section>
     <h2 class="section-title">Join the AAYPL Community</h2>
