--- a/aaypl-frontend/index.html
+++ b/aaypl-frontend/index.html
@@ -151,28 +151,56 @@
   </section>
 
   <!-- Footer -->
-  <footer>
-    <div class="footer-content">
-      <div class="footer-logo">
-        <img src="assets/aaypl-logo.png" alt="AAYPL Logo"/>
-        AAYPL
-      </div>
-      <div class="footer-links">
-        <a href="about.html">About</a>
-        <a href="https://blog.aaypl.org" target="_blank" rel="noopener">Blog</a>
-        <a href="https://events.aaypl.org" target="_blank" rel="noopener">Events</a>
-        <a href="register.html">Join</a>
-        <a href="contact.html">Contact</a>
-      </div>
-      <div class="footer-social">
-        <a href="#" aria-label="Twitter"><span>🐦</span></a>
-        <a href="#" aria-label="Facebook"><span>📘</span></a>
-        <a href="#" aria-label="Instagram"><span>📸</span></a>
-        <a href="#" aria-label="LinkedIn"><span>🔗</span></a>
-      </div>
+ <footer>
+  <div class="footer-content">
+    <div class="footer-logo">
+      <img src="assets/aaypl-logo.png" alt="AAYPL Logo" style="height:38px;width:38px;vertical-align:middle;border-radius:50%;box-shadow:0 1px 6px #0002;">
+      <span style="font-weight:700;font-size:1.3rem;color:#ffd700;margin-left:0.6em;">AAYPL</span>
     </div>
-    <div style="margin-top:2em;font-size:0.96rem;color:#ffd700;">&copy; 2025 All Africa Young Political Leaders (AAYPL). All Rights Reserved.</div>
-  </footer>
+    <div class="footer-links">
+      <a href="about.html">About</a>
+      <a href="blog.html">Blog</a>
+      <a href="events.html">Events</a>
+      <a href="register.html">Join</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <div class="footer-social">
+      <!-- Facebook -->
+      <a href="https://facebook.com/aayplorg" target="_blank" aria-label="Facebook" style="color:#ffd700;">
+        <svg width="28" height="28" viewBox="0 0 28 28" fill="none">
+          <circle cx="14" cy="14" r="14" fill="#181c32"/>
+          <path d="M17.5 8.5h-2a2 2 0 0 0-2 2v2h-1.5V14h1.5v5h3v-5H17l.5-1.5h-2.5v-1c0-.28.22-.5.5-.5h2V8.5z" fill="#ffd700"/>
+        </svg>
+      </a>
+      <!-- TikTok -->
+      <a href="https://www.tiktok.com/@aayplorg" target="_blank" aria-label="TikTok" style="color:#ffd700;">
+        <svg width="28" height="28" viewBox="0 0 28 28" fill="none">
+          <circle cx="14" cy="14" r="14" fill="#181c32"/>
+          <path d="M18 7.25v6.24a3.74 3.74 0 1 1-3.74-3.74h.01V12a2.5 2.5 0 1 0 2.5 2.5h.01V7.25h1.22a3.48 3.48 0 0 0 1.51 2.03v1.33a4.72 4.72 0 0 1-2.73-1.03V19a5.75 5.75 0 1 1 0-11.5h.22z" fill="#ffd700"/>
+        </svg>
+      </a>
+      <!-- Instagram -->
+      <a href="https://instagram.com/aayplorg" target="_blank" aria-label="Instagram" style="color:#ffd700;">
+        <svg width="28" height="28" viewBox="0 0 28 28" fill="none">
+          <circle cx="14" cy="14" r="14" fill="#181c32"/>
+          <rect x="8" y="8" width="12" height="12" rx="4" stroke="#ffd700" stroke-width="2"/>
+          <circle cx="14" cy="14" r="3" stroke="#ffd700" stroke-width="2"/>
+          <circle cx="18.5" cy="9.5" r="1" fill="#ffd700"/>
+        </svg>
+      </a>
+      <!-- Twitter/X -->
+      <a href="https://twitter.com/aayplorg" target="_blank" aria-label="Twitter" style="color:#ffd700;">
+        <svg width="28" height="28" viewBox="0 0 28 28" fill="none">
+          <circle cx="14" cy="14" r="14" fill="#181c32"/>
+          <path d="M19.9 9.2l-4.7 6.4h2.9l-3 4.2h1.6L21 10.2l-1.1-.9zm-8.2 8.4l2.7-3.7h-2.6l3-4.2h-1.6l-3.8 5.4 1.1.9 4.7-6.4h-2.9l-2.7 3.7h2.6l-3 4.2h1.6l3.8-5.4-1.1-.9z" fill="#ffd700"/>
+        </svg>
+      </a>
+    </div>
+  </div>
+  <div style="margin-top:2em;font-size:0.96rem;color:#ffd700;">
+    &copy; 2025 All Africa Young Political Leaders (AAYPL). All Rights Reserved.
+  </div>
+</footer>
 
   <!-- WhatsApp Floating Button -->
   <a href="https://wa.me/2348000000000" target="_blank" class="whatsapp-btn" aria-label="WhatsApp">💬</a>
