--- a/aaypl-frontend/about.html
+++ b/aaypl-frontend/about.html
@@ -233,9 +233,9 @@
   <section class="founder-section">
     <h2>Meet the Founder</h2>
     <img src="assets/founder.jpg" alt="AAYPL Founder" class="founder-img">
-    <div class="founder-name">Jane Doe</div>
+    <div class="founder-name">Badeji Adetunji</div>
     <div class="founder-bio">
-      Jane Doe is the visionary founder of AAYPL, dedicated to uniting and empowering Africa’s next generation of political leaders. Her passion for youth leadership and inclusive governance continues to shape the organization’s mission and growth.
+      Badeji Adeunji is the visionary founder of AAYPL, dedicated to uniting and empowering Africa’s next generation of political leaders. Her passion for youth leadership and inclusive governance continues to shape the organization’s mission and growth.
     </div>
   </section>
 
