--- a/aaypl-frontend/about.html
+++ b/aaypl-frontend/about.html
@@ -268,7 +268,7 @@
     <p>
       Are you passionate about Africa’s future? Do you believe in the power of youth-led change? Become a part of AAYPL and help shape the continent’s destiny.
     </p>
-    <a href="register.html" class="cta-btn">Become a Member</a>
+    <a href="register.html" class="cta-btn become-member-btn">Become a Member</a>
   </section>
 
   <!-- Footer -->
